--- a/stores/app/views/stores/show.html.erb
+++ b/stores/app/views/stores/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Stores#show</h1>
-<p>Find me in app/views/stores/show.html.erb</p>
+<h1><%= @store.name %></h1>
+<img src="<%= @store.url%>"> 
+<h4>Located in <%= @store.location%> </h4>
