--- a/stores/app/views/stores/edit.html.erb
+++ b/stores/app/views/stores/edit.html.erb
@@ -1,2 +1,26 @@
-<h1>Stores#edit</h1>
-<p>Find me in app/views/stores/edit.html.erb</p>
+<h1>Edit Store</h1>
+<p>
+<%= link_to "back", @store %>
+</p>
+
+<%=form_for @store do |s|%>
+    <p>
+    <%=s.label :name%><br>
+    <%=s.text_field :name %>
+    </p>
+
+    <p>
+    <%=s.label :location%><br>
+    <%=s.text_field :location %>
+    </p>
+
+    <p>
+    <%=s.label :url%><br>
+    <%=s.text_field :url %>
+    </p>
+    
+    <p>
+    <%=s.submit%>
+    </p>    
+
+    <% end %>
