--- a/stores/app/views/stores/new.html.erb
+++ b/stores/app/views/stores/new.html.erb
@@ -1,5 +1,7 @@
 <h1> add a store</h1>
 
+<%=link_to " Back to stores" , stores_url %>
+
 <%= form_for @store do |s|%>
     <p>
         <%=s.label  :name %> <br>
