set up app for production. changed db for production from sqlite3 to postgresql

--- a/stores/app/assets/stylesheets/stores.scss
+++ b/stores/app/assets/stylesheets/stores.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the stores controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.container{
+    background-color: lightblue;
+    padding: 25px;
+    display: flex;
+    // order: <2>;
+    flex-direction: row;
+    flex-wrap:wrap;
+    justify-content: center;
+    width: 100%;
+
+}
+
+.container img{
+    max-height:75%;
+  max-width: 75%;
+}
+
+.images{
+  max-width: 50%;
+  height: auto;  
+}
+
