added items method to users controller and to views.

--- a/stores/app/views/stores/index.html.erb
+++ b/stores/app/views/stores/index.html.erb
@@ -2,7 +2,7 @@
 <h1>My Faviorate Stores: </h1>
 
 <%= link_to "new store" , "/stores/new"%>
-<% if @stores.any %>
+<% if @stores.any? %>
 <% @stores.each do |store|%>
 
 <p>Name: <%=store.name %> </p> 
@@ -10,10 +10,11 @@
 <p> Location: <%=store.location %> </p>
 
 <p> Image:</p><%= link_to image_tag(store.url), "/stores/#{store.id}"%>
+<% end%>
 
 <% else %>
-
 <p> There are presently no stores <p>
 <% end %>
-<% end%> 
+
+ 
 </div>
